<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.iastate.cs309.hb6.foodtime.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pantry"
        android:name="edu.iastate.cs309.hb6.foodtime.ui.pantry.PantryFragment"
        android:label="@string/title_pantry"
        tools:layout="@layout/fragment_pantry" />

    <fragment
        android:id="@+id/navigation_cookbook"
        android:name="edu.iastate.cs309.hb6.foodtime.ui.cookbook.CookBookFragment"
        android:label="@string/title_cookbook"
        tools:layout="@layout/fragment_cookbook" />
</navigation>